# FantasyLoL

./: .dockerignore  .flake8  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dockerfile-fantasy  Dockerfile-riot  LICENSE  README.md  TODO  alembic.ini  docker-compose.local.yml  docker-compose.yml  example.env  fantasy-league-of-legends-test.db  fantasy-league-of-legends.db  fantasy_app.py  main.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  riot_app.py  setup.cfg
.github/ISSUE_TEMPLATE/: epic.md  (+3 more)
alembic/: env.py
auth/: auth_handler.py
common/: config.py
db/: crud.py  database.py  models.py  views.py
diagrams/: FantasyDataUML.drawio  RiotDataUML.drawio
docker/: Dockerfile-fantasy  Dockerfile-riot  docker-compose.local.yml
docker-files/: Dockerfile-api  Dockerfile-fantasy  Dockerfile-migrate  Dockerfile-riot  Dockerfile-scraper  Dockerfile-ui  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.server.yml
docs/: UI_AGENT_INSTRUCTIONS.md  architecture.md  development.md
fantasylol/: __init__.py  app.py  fantasy-league-of-legends-test.db  main.py
scripts/: analyze_game_frames.py  docker_local.sh  docker_server.sh  dump_game_frames.py  find_python.sh  linter.sh  migrate.sh  run_tests.sh
src/: app.py  fantasy_app.py  riot_app.py
tests/: FantasyLolTestBase.py  conftest.py  fantasy_lol_test_base.py  riot_api_requester_util.py  test_app.py  test_base.py  test_crud.py  test_riot_api_requester.py
ui/: .env.development  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+513 files in other folders)
