[project]
name = "fantasy-lol"
version = "0.1.0"
description = "Fantasy League of Legends platform with Riot data scraping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "APScheduler==3.10.4",
    "cloudscraper==1.2.71",
    "fastapi==0.111.0",
    "fastapi_pagination==0.12.25",
    "uvicorn==0.30.1",
    "httpx==0.23.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "pydantic[email]==2.7.4",
    "pydantic-settings==2.5.2",
    "pytz==2024.1",
    "bcrypt==4.1.3",
    "PyJWT==2.12.0",
    "certifi==2024.7.4",
    "email-validator==2.1.2",
    "classy_fastapi==0.6.1",
    "docker==7.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.8",
    "mypy==1.10.0",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "types-pytz==2024.1.0.20240417",
    "types-requests==2.32.0.20240602",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=50"

[tool.ruff]
line-length = 100
exclude = [".github", "__pycache__", ".vscode", "venv", ".venv", ".idea", "out"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
